Se cambia tamaño de la marca de los producto categoriesproduct como prueba por responsive

--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -461,6 +461,11 @@
                             .productinfo{
                                 .producttrademark{
                                     font-size: small;
+                                    margin-bottom: 0;
+                                    height: 1.5rem;
+                                    span{
+                                        height: 1.4rem;
+                                    }
                                 }
                                 .productname{
                                     p{
