Se hace pruebas de tamaño de marca de los productos categories 3

--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -462,9 +462,9 @@
                                 .producttrademark{
                                     font-size: small;
                                     margin-bottom: 0;
-                                    height: auto;
+                                    height: 1.8rem;
                                     span{
-                                        height: auto;
+                                        height: 1.8rem !important; 
                                         i{
                                             height: auto;
                                         }
