--- a/scss/main.css
+++ b/scss/main.css
@@ -1741,10 +1741,10 @@
   #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .producttrademark {
     font-size: small;
     margin-bottom: 0;
-    height: auto;
+    height: 1.8rem;
   }
   #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .producttrademark span {
-    height: auto;
+    height: 1.8rem !important;
   }
   #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .producttrademark span i {
     height: auto;
