Se hace pruebas de tamaño de marca de los productos categories 4

--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -464,9 +464,9 @@
                                     margin-bottom: 0;
                                     height: 1.8rem;
                                     span{
-                                        height: 1.8rem !important; 
                                         i{
                                             height: auto;
+                                            font-size: x-small;
                                         }
                                     }
                                 }
