Se hace pruebas de tamaño de marca de los productos categories 5

--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -465,8 +465,7 @@
                                     height: 1.8rem;
                                     span{
                                         i{
-                                            height: auto;
-                                            font-size: x-small;
+                                            font-size: xx-small !important;
                                         }
                                     }
                                 }
