--- a/scss/main.css
+++ b/scss/main.css
@@ -1744,8 +1744,7 @@
     height: 1.8rem;
   }
   #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .producttrademark span i {
-    height: auto;
-    font-size: x-small;
+    font-size: xx-small !important;
   }
   #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .productname p {
     font-size: x-small !important;
