Se hace pruebas de tamaño de marca de los productos categories 7

--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -462,11 +462,7 @@
                                 .producttrademark{
                                     margin-bottom: 0;
                                     height: 1.8rem;
-                                    span{
-                                        i{
-                                            font-size: xx-small !important;
-                                        }
-                                    }
+                                    font-size: x-small !important
                                 }
                                 .productname{
                                     p{
