Se hace pruebas de tamaño de marca de los productos categories 8

--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -462,7 +462,7 @@
                                 .producttrademark{
                                     margin-bottom: 0;
                                     height: 1.8rem;
-                                    font-size: x-small !important
+                                    font-size: small;
                                 }
                                 .productname{
                                     p{
