--- a/scss/main.css
+++ b/scss/main.css
@@ -1741,7 +1741,7 @@
   #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .producttrademark {
     margin-bottom: 0;
     height: 1.8rem;
-    font-size: x-small !important;
+    font-size: small;
   }
   #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .productname p {
     font-size: x-small !important;
