--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -463,6 +463,11 @@
                                     margin-bottom: 0;
                                     height: 1.8rem;
                                     font-size: small !important;
+                                    span{
+                                        i{
+                                            font-size: xx-small !important;
+                                        }
+                                    }
                                 }
                                 .productname{
                                     p{
