Se hace pruebas de tamaño de marca de los productos categories 11

--- a/scss/main.css
+++ b/scss/main.css
@@ -1743,7 +1743,7 @@
     height: 1.8rem;
     font-size: small !important;
   }
-  #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .producttrademark span i {
+  #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .producttrademark span .fa-registered {
     font-size: xx-small !important;
   }
   #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .productname p {
