--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -464,7 +464,7 @@
                                     height: 1.8rem;
                                     font-size: small !important;
                                     span{
-                                        i{
+                                        .fa-registered{
                                             font-size: xx-small !important;
                                         }
                                     }
