Se hace pruebas de tamaño de marca de los productos categories 12

--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -461,7 +461,8 @@
                             .productinfo{
                                 .producttrademark{
                                     margin-bottom: 0;
-                                    height: 1.8rem;
+                                    width: auto;
+                                    height: 1.5rem;
                                     font-size: small !important;
                                     span{
                                         .fa-registered{
