--- a/scss/main.css
+++ b/scss/main.css
@@ -1740,7 +1740,8 @@
   }
   #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .producttrademark {
     margin-bottom: 0;
-    height: 1.8rem;
+    width: auto;
+    height: 1.5rem;
     font-size: small !important;
   }
   #containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products .product .productinfo .producttrademark span .fa-registered {
