--- a/scss/main.css
+++ b/scss/main.css
@@ -1108,6 +1108,7 @@
   text-align: start;
 }
 
+/* mexin para display de columnas centradas */
 /*  */
 /* Style for registeruser */
 /* Sección para llenar formulario del registro de usuario */
@@ -1133,6 +1134,10 @@
   grid-template-rows: repeat(3 auto);
   width: 100%;
   gap: 1%;
+  /* Todo lo que este dentro de formreguser no tenga scroll en Y */
+}
+#formcontainer #sectionformreguser .formreguser * {
+  overflow-y: hidden;
 }
 #formcontainer #sectionformreguser .formreguser .reguserdataone {
   grid-column-start: 1;
@@ -1250,6 +1255,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: none;
 }
 #formcontainer #sectionformreguser .formreguser .reguserdatafour button {
   background-color: #470696;
